--- a/att.teste/projeto/style.css
+++ b/att.teste/projeto/style.css
@@ -64,12 +64,13 @@ opacity: 1;
 .inicio{
    width: 100%;
    height: 500px;
-   max-width: 850px;
+   max-width: 880px;
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 2%);
    border-radius: 25px;
    position: relative;
    top: 35px;
+   margin: 20px;
    
 
 
@@ -91,10 +92,11 @@ opacity: 1;
 
 .inicio ol{
 
-    border:  7px solid red;
+    
     position: relative;
     left: 20px;
- 
+    background-color: #94bbe9;
+   
     
 
 
@@ -102,5 +104,33 @@ opacity: 1;
 
 .inicio input{
     margin: 8px;
+}
+
+
+.lado_direito{
+    position: relative;
+    left: 1150px;
+    top: -460px;
+
+
+
+}
+
+.button_a{
+    background-color: red;
+
+    
+    
+
+
+}
+
+.button_b{
+    background-color: red;
+
+    
+    
+
+
 }
 
